<resources>
    <string name="app_name">StoreApiApp</string>
    <string name="store">Tienda</string>
    <string name="shoppingcart">Carrito</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="descripci_n_del_producto">Descripción del Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="categor_a_del_producto">Categoría del Producto</string>
    <string name="rate_del_producto">Puntuación del Producto</string>
    <string name="count_del_rate_del_producto">Votaciones</string>
    <string name="hello_blank_fragment">Hola!</string>
    <string name="default_cart_name">Mi Carrito</string>
    <string name="add">Añadir</string>
    <string name="nombre_del_carrito">Nombre del Carrito</string>
    <string name="editar">Editar</string>
    <string name="products">Productos</string>
    <string name="share_cart">Compartir Carrito</string>
    <string name="categoria_con_placeholder">Categoría: %1$s</string>
    <string name="price_con_placeholder">Precio: $ %1$s</string>
    <string name="count_con_placeholder">Reseñas: %1$s</string>
    <string name="total_price_con_placeholder">Total: $ %1$s</string>
    <string name="quantity_con_placeholder">Cantidad: %1$s</string>
    <string name="cart_name_con_placeholder">Nombre del Carrito: %1$s</string>

</resources>