<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_light_primaryContainer"
        app:navigationIcon="@drawable/arrow_back"/>

    <!-- Contenedor para el resto del contenido con padding -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre del Producto -->
        <TextView
            android:id="@+id/product_name"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:layout_marginTop="8dp" />

        <!-- Imagen del Producto -->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp" />

        <!-- Descripción del Producto -->
        <TextView
            android:id="@id/product_description"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_del_producto"
            android:layout_marginTop="16dp" />

        <!-- Precio del Producto -->
        <TextView
            android:id="@+id/product_price"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_del_producto"
            android:layout_marginTop="8dp" />

        <!-- Categoría del Producto -->
        <TextView
            android:id="@id/product_category"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_con_placeholder"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            />


        <!-- Contenedor para RatingBar y la cuenta de votos -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">

            <!-- RatingBar -->
            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="4.3"
                android:isIndicator="true" />

            <!-- Cantidad de Votos -->
            <TextView
                android:id="@+id/product_count"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_del_rate_del_producto"
                android:layout_marginStart="4dp" />
        </LinearLayout>

        <!-- Contenedor para botones de cantidad y añadir -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <!-- Botón Menos -->
            <Button
                android:id="@+id/button_decrease"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:icon="@drawable/remove"
                android:layout_marginEnd="20dp"
                app:iconSize="32dp" />

            <!-- Cantidad -->
            <TextView
                android:id="@+id/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="0" />

            <!-- Botón Más -->
            <Button
                android:id="@+id/button_increase"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                app:icon="@drawable/add"
                app:iconSize="32dp" />
        </LinearLayout>


        <!-- Botón Añadir -->
        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="5dp" />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
